# ILSC_project

./: .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  find_paths_with_length.cpp
graph/: CMakeLists.txt  adjacency_matrix.cpp  adjacency_matrix.h  adjacency_matrix_openmp.h  flatten_adjacency_matrix.cpp  flatten_adjacency_matrix.h  flatten_adjacency_matrix_openmp.h  graph.h  graph_generation.cpp  graph_generation.h  graph_generation_impl.h  graph_openmp.h  paths_counts.h  paths_counts_naive.h
tests/: CMakeLists.txt  test_adjacency_matrix.cpp  test_graph_implementations.cpp  test_paths_counts.cpp
